--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <a class="nav-link cf" href="#">Home </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link cf" href="#">About Us</a>
+                <a class="nav-link cf" href="about.html">About Us</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link cf"href="#">Galerry</a>
@@ -95,86 +95,12 @@
                 <img class="gambar" src="assets/img/aaaa.png" alt="">
             </div>
         </div>
-    </div>
+</div>
 
-<!-- card -->
-<!-- <div class="container">
-    <div class="row">
-      <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-        <div class="our-team">
-          <div class="picture">
-            <img class="img-fluid gam" src="assets/img/arip.png">
-          </div>
-          <div class="team-content">
-            <h3 class="name">Arief Wibowoo</h3>
-            <h4 class="title">CEO & Founder</h4>
-          </div>
-          <ul class="social">
-            <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-facebook" aria-hidden="true"></a></li>
-            <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-twitter" aria-hidden="true"></a></li>
-            <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-google-plus" aria-hidden="true"></a></li>
-            <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-linkedin" aria-hidden="true"></a></li>
-          </ul>
-        </div>
-      </div>
-          <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-        <div class="our-team">
-          <div class="picture">
-            <img class="img-fluid gam" src="assets/img/adi.png">
-          </div>
-          <div class="team-content">
-            <h3 class="name">Adi Triyono</h3>
-            <h4 class="title">Game Developer</h4>
-          </div>
-          <ul class="social">
-            <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-facebook" aria-hidden="true"></a></li>
-            <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-twitter" aria-hidden="true"></a></li>
-            <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-google-plus" aria-hidden="true"></a></li>
-            <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-linkedin" aria-hidden="true"></a></li>
-          </ul>
-        </div>
-      </div>
-          <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-        <div class="our-team">
-          <div class="picture">
-            <img class="img-fluid gam" src="assets/img/fasya.jpg">
-          </div>
-          <div class="team-content">
-            <h3 class="name">Fasya Adzkia</h3>
-            <h4 class="title">Game Developer</h4>
-          </div>
-          <ul class="social">
-            <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-facebook" aria-hidden="true"></a></li>
-            <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-twitter" aria-hidden="true"></a></li>
-            <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-google-plus" aria-hidden="true"></a></li>
-            <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-linkedin" aria-hidden="true"></a></li>
-          </ul>
-        </div>
-      </div>
-          <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-        <div class="our-team">
-          <div class="picture">
-            <img class="img-fluid " src="assets/img/difa.jpg">
-          </div>
-          <div class="team-content">
-            <h3 class="name">Difa Naufal</h3>
-            <h4 class="title">Game Artist</h4>
-          </div>
-          <ul class="social">
-            <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-facebook" aria-hidden="true"></a></li>
-            <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-twitter" aria-hidden="true"></a></li>
-            <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-google-plus" aria-hidden="true"></a></li>
-            <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-linkedin" aria-hidden="true"></a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div> -->
-<!-- card end -->
-
-
-
-
+<div class="container">
+  <h1 class="judul">Portofolio</h1>
+  
+</div>
 
 
 </body>
