--- a/index.html
+++ b/index.html
@@ -97,11 +97,75 @@
         </div>
 </div>
 
+<br>
+<br>
+
 <div class="container">
-  <h1 class="judul">Portofolio</h1>
-  
+  <h1 class="judul">Portofolio</h1><br>
+   <div class="row">
+        <div class="col-lg-4">
+            <div class="card" style="width: 22rem;">
+              <img src="assets/img/port1.png" class="card-img-top" alt="...">
+                  <div class="card-body" style="height: 6.5rem;">
+                    <p class="card-text" style="color: black; text-align: center; ">Lembaga Zakat Amanah</p>
+                    <a href="zakat.html"class="btn btn-dark" style="margin-left: 6rem;">View Page</a>
+                  </div>
+            </div>
+        </div>
+        <div class="col-lg-4">
+            <div class="card" style="width: 22rem;">
+              <img src="assets/img/port2.png" class="card-img-top" alt="...">
+                  <div class="card-body" style="height: 6.5rem;">
+                    <p class="card-text" style="color: black; text-align: center; ">Web Profile</p>
+                    <a href="https://www.aditriono.com"class="btn btn-dark" style="margin-left: 6rem;">View Page</a>
+                  </div>
+            </div>
+        </div>
+        <div class="col-lg-4">
+            <div class="card" style="width: 22rem;">
+              <img src="assets/img/port3.png" class="card-img-top" alt="...">
+                  <div class="card-body" style="height: 6.5rem;">
+                    <p class="card-text" style="color: black; text-align: center; ">Web Profile</p>
+                    <a href="http://www.satrialaksana.online"class="btn btn-dark" style="margin-left: 6rem;">View Page</a>
+                  </div>
+            </div>
+        </div>
+   </div>
+   <br>
+   <div class="row">
+        <div class="col-lg-4">
+            <div class="card" style="width: 22rem;">
+              <img src="assets/img/port4.png" class="card-img-top" alt="...">
+                  <div class="card-body" style="height: 6.5rem;">
+                    <p class="card-text" style="color: black; text-align: center; ">Web Profile</p>
+                    <a href="http://www.agus-sulaeman.site"class="btn btn-dark" style="margin-left: 6rem;">View Page</a>
+                  </div>
+            </div>
+        </div>
+        <div class="col-lg-4">
+            <div class="card" style="width: 22rem;">
+              <img src="assets/img/port5.png" class="card-img-top" alt="...">
+                  <div class="card-body" style="height: 6.5rem;">
+                    <p class="card-text" style="color: black; text-align: center; ">Web Profile</p>
+                    <a href="http://www.dnfxv.site"class="btn btn-dark" style="margin-left: 6rem;">View Page</a>
+                  </div>
+            </div>
+        </div>
+        <div class="col-lg-4">
+            <div class="card" style="width: 22rem;">
+              <img src="assets/img/port3.png" class="card-img-top" alt="...">
+                  <div class="card-body" style="height: 6.5rem;">
+                    <p class="card-text" style="color: black; text-align: center; ">Web Profile</p>
+                    <a href="http://www.satrialaksana.online"class="btn btn-dark" style="margin-left: 6rem;">View Page</a>
+                  </div>
+            </div>
+        </div>
+   </div>
 </div>
 
+<br>
+<br>
+<br>
 
 </body>
 <!-- js links -->
